--- a/noticia.html
+++ b/noticia.html
@@ -4,46 +4,67 @@
         <title>Meu Portal de Notícias</title>
     </head>
     <body>
-        <h1>Poluição do Rio Tietê avança sobre interior de São Paulo e deixa toneladas de peixes mortos em cenário paradisíaco</h1>
-        <h2>A Companhia Ambiental do Estado de São Paulo, responsável por monitorar a qualidade da água, declarou ter aplicado 37 multas que somam mais de R$ 1 milhão nos últimos cinco anos.</h2>
-        <p>
-            O avanço da poluição transformou o cenário paradisíaco do Rio Tietê, no interior de <strong>São Paulo.</strong>
-        </p>
-        <p>
-            Os vídeos foram gravados perto da usina hidrelétrica de <strong>Buritama.</strong> Dezenas de arraias, que geralmente vivem submersas, aparecem na superfície. É um indício da falta de oxigênio no fundo do rio. Uma situação que tem se repetido com frequência em vários pontos do Tietê no interior de São Paulo
-        </p>
-        <p>
-            <strong>"Está feia a situação. Camarão morrendo, peixe morrendo... Os peixes pequenos estão morrendo tudo”, consta o pescador John Lennon Rodrigues Pereira.</strong>
-        </p>
-        <p>
-            O piscicultor Nelson Benedito Moreira também está acostumado a tirar o sustento dessas águas. Desde quarta-feira (19), já precisou descartar 12 toneladas de tilápia em plena quaresma, quando a procura pelo peixe aumenta e a venda é certa.
-        </p>
-        <p>
-            <strong>"Era um rio quase que intocável. Agora, chegou desse jeito e para quem produz peixe vai produzir peixe aonde?”, diz Nelson Benedito Moreira.</strong>
-        </p>
-        <p>
-            Os peixes começaram a morrer depois que a água ficou verde. Duas pisciculturas de <strong>Ubarana</strong> foram afetadas. Em uma, todos os peixes morreram. Juntos, os produtores perderam cerca de 35 toneladas de tilápia. Prejuízo estimado em mais de R$ 1 milhão. O biólogo Marcelo Oliveira explica que a multiplicação das algas deixou a água esverdeada. Uma consequência do esgoto e da poluição - <em>que, agora, também atinge esse trecho do rio.</em>
-        </p>
-        <p>
-            <strong>"Isso é um prejuízo enorme para o ecossistema. O excesso de nutrientes que ocasiona a proliferação em excesso das algas, das plantas aquáticas, e que tira toda a oxigenação do rio. Infelizmente, isso vai prejudicando a resiliência, ou seja, a capacidade do rio de retornar a um estado ambiental adequado para vida dos peixes”.</strong>
-        </p>
-        <p>
-            A Companhia Ambiental do Estado de São Paulo coletou amostras para analisar a água. A Cetesb declarou ter aplicado, nos últimos cinco anos, 80 penalidades contra infratores ambientais.
-        </p>
-        <p>
-            A prainha da cidade que, costumava ser cristalina e recebia 3 mil turistas por fim de semana, agora está imprópria para banhistas.
-        </p>
-        <p>
-            <strong>"A prainha vive do turista aqui e isso está afetando grandemente a economia do nosso município”, conta Eliezer Padovani, diretor de Meio Ambiente de Ubarana.</strong>
-        </p>
-        <p>
-            <strong>"Uma coisa bem feia né... Peixe morto, uma água bem verde, uma situação bem triste. A gente já vem entusiasmado para vim pescar, nadar com as crianças, com os filhos, e já chega e vê isso”, lamenta o pedreiro Ismael Rosa de Oliveira.</strong>
-        </p>
-        <p>
-            <strong>"Não merecia, a população daqui uma covardia, uma estupidez dessa”, diz o aposentado Ervio Ormenezi.</strong>
-        </p>
-        <p>
-            <em>Fonte: g1.</em>
-        </p>
+        <header>
+            <img src="" alt="Logo do Meu Portal de Notícias">
+            <h1>Poluição do Rio Tietê avança sobre interior de São Paulo e deixa toneladas de peixes mortos em cenário paradisíaco</h1>
+            <ul>
+                <li>Home</li>
+                <li>Principais</li>
+                <li>Finanças</li>
+                <li>Esportes</li>
+            </ul>
+        </header>
+        <main>
+            <article>
+                <h2>A Companhia Ambiental do Estado de São Paulo, responsável por monitorar a qualidade da água, declarou ter aplicado 37 multas que somam mais de R$ 1 milhão nos últimos cinco anos.</h2>
+                <p>
+                    O avanço da poluição transformou o cenário paradisíaco do Rio Tietê, no interior de <strong>São Paulo.</strong>
+                </p>
+                <p>
+                    Os vídeos foram gravados perto da usina hidrelétrica de <strong>Buritama.</strong> Dezenas de arraias, que geralmente vivem submersas, aparecem na superfície. É um indício da falta de oxigênio no fundo do rio. Uma situação que tem se repetido com frequência em vários pontos do Tietê no interior de São Paulo
+                </p>
+                <p>
+                    <strong>"Está feia a situação. Camarão morrendo, peixe morrendo... Os peixes pequenos estão morrendo tudo”, consta o pescador John Lennon Rodrigues Pereira.</strong>
+                </p>
+                <p>
+                    O piscicultor Nelson Benedito Moreira também está acostumado a tirar o sustento dessas águas. Desde quarta-feira (19), já precisou descartar 12 toneladas de tilápia em plena quaresma, quando a procura pelo peixe aumenta e a venda é certa.
+                </p>
+                <p>
+                    <strong>"Era um rio quase que intocável. Agora, chegou desse jeito e para quem produz peixe vai produzir peixe aonde?”, diz Nelson Benedito Moreira.</strong>
+                </p>
+                <p>
+                    Os peixes começaram a morrer depois que a água ficou verde. Duas pisciculturas de <strong>Ubarana</strong> foram afetadas. Em uma, todos os peixes morreram. Juntos, os produtores perderam cerca de 35 toneladas de tilápia. Prejuízo estimado em mais de R$ 1 milhão. O biólogo Marcelo Oliveira explica que a multiplicação das algas deixou a água esverdeada. Uma consequência do esgoto e da poluição - <em>que, agora, também atinge esse trecho do rio.</em>
+                </p>
+                <p>
+                    <strong>"Isso é um prejuízo enorme para o ecossistema. O excesso de nutrientes que ocasiona a proliferação em excesso das algas, das plantas aquáticas, e que tira toda a oxigenação do rio. Infelizmente, isso vai prejudicando a resiliência, ou seja, a capacidade do rio de retornar a um estado ambiental adequado para vida dos peixes”.</strong>
+                </p>
+                <p>
+                    A Companhia Ambiental do Estado de São Paulo coletou amostras para analisar a água. A Cetesb declarou ter aplicado, nos últimos cinco anos, 80 penalidades contra infratores ambientais.
+                </p>
+                <p>
+                    A prainha da cidade que, costumava ser cristalina e recebia 3 mil turistas por fim de semana, agora está imprópria para banhistas.
+                </p>
+                <p>
+                    <strong>"A prainha vive do turista aqui e isso está afetando grandemente a economia do nosso município”, conta Eliezer Padovani, diretor de Meio Ambiente de Ubarana.</strong>
+                </p>
+                <p>
+                    <strong>"Uma coisa bem feia né... Peixe morto, uma água bem verde, uma situação bem triste. A gente já vem entusiasmado para vim pescar, nadar com as crianças, com os filhos, e já chega e vê isso”, lamenta o pedreiro Ismael Rosa de Oliveira.</strong>
+                </p>
+                <p>
+                    <strong>"Não merecia, a população daqui uma covardia, uma estupidez dessa”, diz o aposentado Ervio Ormenezi.</strong>
+                </p>
+            </article>
+        </main>
+        <footer>
+            <p>
+                <em>Fonte: g1.</em>
+            </p>
+            <ul>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Twitter/X</a></li>
+                <li><a href="">Threads</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
