--- a/noticia.html
+++ b/noticia.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <header>
-            <img src="" alt="Logo do Meu Portal de Notícias">
-            <h1>Poluição do Rio Tietê avança sobre interior de São Paulo e deixa toneladas de peixes mortos em cenário paradisíaco</h1>
+            <img src="https://picsum.photos/50" alt="Logo do Meu Portal de Notícias">
+            <h1>Meu Portal de Notícias</h1>
             <ul>
                 <li>Home</li>
                 <li>Principais</li>
@@ -16,7 +16,8 @@
         </header>
         <main>
             <article>
-                <h2>A Companhia Ambiental do Estado de São Paulo, responsável por monitorar a qualidade da água, declarou ter aplicado 37 multas que somam mais de R$ 1 milhão nos últimos cinco anos.</h2>
+                <h2>Poluição do Rio Tietê avança sobre interior de São Paulo e deixa toneladas de peixes mortos em cenário paradisíaco</h2>
+                <h3>A Companhia Ambiental do Estado de São Paulo, responsável por monitorar a qualidade da água, declarou ter aplicado 37 multas que somam mais de R$ 1 milhão nos últimos cinco anos.</h3>
                 <p>
                     O avanço da poluição transformou o cenário paradisíaco do Rio Tietê, no interior de <strong>São Paulo.</strong>
                 </p>
@@ -53,17 +54,33 @@
                 <p>
                     <strong>"Não merecia, a população daqui uma covardia, uma estupidez dessa”, diz o aposentado Ervio Ormenezi.</strong>
                 </p>
+                <p>
+                    <em>Fonte: g1.</em>
+                </p>
+            </article>
+            <article>
+                <h2>Uma outra notícia</h2>
+                <h3>Mais detalhes da outra notícia</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, ut reiciendis? Deleniti, quisquam laboriosam iste asperiores reprehenderit at exercitationem voluptatibus, dolorum impedit autem in minima? Rem blanditiis cum corrupti enim.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laboriosam veniam maiores quo in recusandae dignissimos quidem illo asperiores fuga eum, quis corrupti harum iusto doloremque neque distinctio delectus? Quam.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis amet, optio illo veniam reiciendis aliquam. Totam magni quam id maxime odit, quo quia nulla iusto aliquid enim nam nihil ratione. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste illo atque accusantium in autem nobis error! Maiores quis numquam tempore esse laboriosam nostrum eius veritatis dolores sequi? Unde, eligendi fugiat.
+                </p>
+                <p>
+                    <em>Meus dados</em>
+                </p>
             </article>
         </main>
         <footer>
-            <p>
-                <em>Fonte: g1.</em>
-            </p>
             <ul>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Twitter/X</a></li>
-                <li><a href="">Threads</a></li>
+                <li><a href="https://instagram.com">Instagram</a></li>
+                <li><a href="https://facebook.com">Facebook</a></li>
+                <li><a href="https://x.com">Twitter/X</a></li>
+                <li><a href="https://threads.net">Threads</a></li>
             </ul>
         </footer>
     </body>
