--- a/Web 08 - Tabelas/Exercício/tenistas.html
+++ b/Web 08 - Tabelas/Exercício/tenistas.html
@@ -4,6 +4,7 @@
         <title>Ranking Top 10 Tenistas</title>
     </head>
     <body>
+        <h1>Top 10 Tenistas de 2025</h1>
         <table border="1">
             <thead>
                 <tr>
@@ -16,68 +17,68 @@
             <tbody>
                 <tr>
                     <td>Jannik Sinner</td>
-                    <td>23 anos, 7 meses</td>
-                    <td>Italiano</td>
+                    <td>23 anos</td>
+                    <td>Itália</td>
                     <td>10330</td>
                 </tr>
                 <tr>
                     <td>Alexander Zverev</td>
-                    <td>27 anos, 11 meses</td>
-                    <td>Alemão</td>
+                    <td>27 anos</td>
+                    <td>Alemanha</td>
                     <td>7645</td>
                 </tr>
                 <tr>
                     <td>Carlos Alcaraz</td>
-                    <td>21 anos, 11 meses</td>
-                    <td>Espanhol</td>
+                    <td>21 anos</td>
+                    <td>Espanha</td>
                     <td>6720</td>
                 </tr>
                 <tr>
                     <td>Taylor Fritz</td>
-                    <td>27 anos, 5 meses</td>
-                    <td>Estadunidense</td>
+                    <td>27 anos</td>
+                    <td>Estados Unidos</td>
                     <td>5290</td>
                 </tr>
                 <tr>
                     <td>Novak Djokovic</td>
-                    <td>37 anos, 10 meses</td>
-                    <td>Sérvio</td>
+                    <td>37 anos</td>
+                    <td>Sérvia</td>
                     <td>4510</td>
                 </tr>
                 <tr>
                     <td>Casper Ruud</td>
-                    <td>26 anos, 3 meses</td>
-                    <td>Norueguês</td>
+                    <td>26 anos</td>
+                    <td>Noruega</td>
                     <td>3855</td>
                 </tr>
                 <tr>
                     <td>Jack Draper</td>
-                    <td>23 anos, 3 meses</td>
-                    <td>Britânico</td>
+                    <td>23 anos</td>
+                    <td>Inglaterra</td>
                     <td>3780</td>
                 </tr>
                 <tr>
                     <td>Stefanos Tsitsipas</td>
-                    <td>26 anos, 7 meses</td>
-                    <td>Grego</td>
+                    <td>26 anos</td>
+                    <td>Grécia</td>
                     <td>3445</td>
                 </tr>
                 <tr>
                     <td>Andrey Rublev</td>
-                    <td>27 anos, 6 meses</td>
-                    <td>Russo</td>
+                    <td>27 anos</td>
+                    <td>Russia</td>
                     <td>3440</td>
                 </tr>
                 <tr>
                     <td>Alex de Minaur</td>
-                    <td>26 anos, 1 mês</td>
-                    <td>Australiano</td>
+                    <td>26 anos</td>
+                    <td>Austrália</td>
                     <td>3335</td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <th colspan="4">Data: 06/04/2025</th>
+                    <th colspan="4">Data da coleta: 06/04/2025</th>
                 </tr>
             </tfoot>
         </table>
