--- a/Web 09 - Formulários/Aula/index.html
+++ b/Web 09 - Formulários/Aula/index.html
@@ -15,8 +15,36 @@
                 <label for="senha">Senha:</label>
                 <input type="password" placeholder="Sua senha" id="senha"/>
             </p>
+
+            <p>
+                Estado Civil:
+                <input type="radio" id="solteiro" name="estado-civil"/>
+                <label for="solteiro">Solteiro</label>
+                <input type="radio" id="casado" name="estado-civil"/>
+                <label for="casado">Casado</label>
+                <input type="radio" id="divorciado" name="estado-civil"/>
+                <label for="divorciado">Divorciado</label>
+            </p>
             
-            <input type="submit" valeu="Log In"/>
+            <p>
+                Estado:
+                <select multiple>
+                    <option>Acre</option>
+                    <option>Amazonas</option>
+                    <option>Minas Gerais</option>
+                    <option>São Paulo</option>
+                    <option>Rio de Janeiro</option>
+                    <option>Santa Catarina</option>
+                    <option>Rio Grande do Sul</option>
+                    <option>Paraná</option>
+                </select>
+            </p>
+            <p>
+                <input type="checkbox" id="termos"/>
+                <label for="termos">Concordo com os termos de uso</label>
+            </p>
+
+            <input type="submit" value="Log In"/>
         </form>
     </body>
 </html>
