--- a/Web 10 - Trabalho-prático/index.html
+++ b/Web 10 - Trabalho-prático/index.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <h1>Felipe "brTT" Gonçalves</h1>
-            <p>O maior jogador de League Of Legens do Brasil!</p>
+            <p>O <strong>Maior Jogador</strong> de League Of Legens do Brasil!</p>
             <img src="./imgs/brtt-imagem.jpg" alt="Foto de Felipe 'brTT' Gonçalves">
         </header>
         <aside>
@@ -228,7 +228,7 @@
                     Com a chegada do sistema de franquias no CBLOL 2021, a paiN manteve a base e contratou o suporte Luci, ex-companheiro campeão no Flamengo, além do técnico turco Nova. Após um início de campeonato inconsistente, a equipe se recuperou e se classificou para os playoffs.
                 </p>
                 <p>
-                    Nos playoffs, a paiN fez história ao aplicar o primeiro "reverse sweep" da competição contra a LOUD, vencendo por 3 a 2 após estar perdendo por 2 a 0. Depois, eliminaram o Flamengo em mais uma série emocionante e chegaram à sexta final da organização — a nona da carreira de brTT.
+                    Nos playoffs, a paiN fez história ao aplicar o primeiro <q>reverse sweep</q> da competição contra a LOUD, vencendo por 3 a 2 após estar perdendo por 2 a 0. Depois, eliminaram o Flamengo em mais uma série emocionante e chegaram à sexta final da organização — a nona da carreira de brTT.
                 </p>
                 <p>
                     Em 18 de abril de 2021, brTT conquistou seu sexto título de CBLOL, o terceiro com a paiN, tornando-se o maior campeão da história do campeonato e ultrapassando até a INTZ em número de títulos. Com o título, a paiN se classificou para o MSI 2021 na Islândia.
@@ -260,19 +260,19 @@
                 <p>Campeão do Riot Season 3 Brazilian Championship (Posteriormente conhecido como CBLOL) pela equipe paiN Gaming (PNG)</p>
             </section>
             <section>
-                <h3>CBLOL 2014 Champions Series Playoffs</h3>
+                <h3><abbr title="Campeonato Brasileiro de League Of Legens">CBLOL</abbr> 2014 Champions Series Playoffs</h3>
                 <p>Campeão do CBLOL (Campeonato Brasileiro de League of Legends) pela equipe Keyd Stars (KST), atual Vivo Keyd Stars (VKS)</p>
             </section>
             <section>
-                <h3>CBLOL 2015 Split 2 Playoffs</h3>
+                <h3><abbr title="Campeonato Brasileiro de League Of Legens">CBLOL</abbr> 2015 Split 2 Playoffs</h3>
                 <p>Campeão do CBLOL (Campeonato Brasileiro de League of Legends) pela equipe paiN Gaming (PNG)</p>
             </section>
             <section>
-                <h3>CBLOL 2017 Split 1 Playoffs</h3>
+                <h3><abbr title="Campeonato Brasileiro de League Of Legens">CBLOL</abbr> 2017 Split 1 Playoffs</h3>
                 <p>Campeão do CBLOL (Campeonato Brasileiro de League of Legends) pela equipe RED Canids (RED)</p>
             </section>
             <section>
-                <h3>CBLOL 2019 Split 2 Playoffs</h3>
+                <h3><abbr title="Campeonato Brasileiro de League Of Legens">CBLOL</abbr> 2019 Split 2 Playoffs</h3>
                 <p>Campeão do CBLOL (Campeonato Brasileiro de League of Legends) pela equipe Flamengo Esports (FLA)</p>
             </section>
             <section>
@@ -298,11 +298,11 @@
         <div>
             <h2>Curiosidades</h2>
             <ul>
-                <li><strong>“Respeita o TT” virou bordão:</strong> O famoso bordão "Respeita o TT" surgiu como uma forma dele se afirmar dentro do cenário competitivo e virou uma marca registrada. A frase viralizou entre os fãs e até hoje é lembrada em qualquer jogada boa que ele faz.</li>
-                <li><strong>Maior campeão do CBLOL:</strong> brTT é hexacampeão do CBLOL, com títulos em 2013, 2015, 2017, 2019 e duas vezes em 2021. Ele é o jogador com mais títulos da história da competição e venceu com três organizações diferentes: paiN Gaming, RED Canids e Flamengo.</li>
+                <li><strong>“Rexpeita o rato” virou bordão:</strong> O famoso bordão "Rexpeita o rato" (que depois ficou somente como "rexpeita") surgiu como uma forma dele se afirmar dentro do cenário competitivo e virou uma marca registrada que marcou seu nome no cenário, e deu nome a sua marca de roupas, a Rexpeita. A frase viralizou entre os fãs e até hoje é lembrada em qualquer jogada boa que ele faz.</li>
+                <li><strong>Maior campeão do CBLOL:</strong> brTT é hexacampeão do CBLOL, com títulos em 2013, 2014, 2015, 2017, 2019 e 2021, e com isso foi o maior campeão da competição durante 3 anos. Ele atualmente é o jogador segundo jogador com mais títulos da história da competição (em 2023 o jogador "Robo" igualou sua marca, e em 2024 "Robo" passou brTT conquistando seu 7° título, e ainda em 2024 "Tinowns" também igualou sua marca de 6 títulos) e venceu com quatro organizações diferentes: paiN Gaming, Keyd Stars, RED Canids e Flamengo.</li>
                 <li><strong>Primeiro jogador a atingir 1000 abates no CBLOL:</strong> Em 2018, jogando pelo Flamengo, brTT se tornou o primeiro jogador da história do CBLOL a atingir 1000 eliminações, um marco histórico para o competitivo brasileiro.</li>
                 <li><strong>Fã de música e tatuagens:</strong> brTT é apaixonado por música, especialmente rock, e tem diversas tatuagens espalhadas pelo corpo, algumas bem visíveis durante as transmissões. Ele também já comentou em entrevistas que a música o ajuda a manter o foco e relaxar.</li>
-                <li><strong>Já cogitou se aposentar várias vezes:</strong> Ao longo da carreira, brTT considerou a aposentadoria em mais de uma ocasião, principalmente após derrotas marcantes ou críticas nas redes sociais. Mesmo assim, ele sempre retornava com ainda mais motivação — o que mostra o quanto ele é apaixonado pelo jogo e pela competição.</li>
+                <li><strong>Já cogitou se aposentar várias vezes:</strong> Ao longo da carreira, brTT considerou a aposentadoria em mais de uma ocasião, principalmente após derrotas marcantes ou críticas nas redes sociais. Mesmo assim, ele sempre retornava com ainda mais motivação — o que mostra o quanto ele é apaixonado pelo jogo e pela competição. Anunciou sua aposentadoria em 2021, mas prometeu voltar para o competivo, em 2024 veio a oportunidade de fazer sua reestreia pela Los Grandes, onde teve uma curta passagem devido a mudança no formato do campeonato, que resultou na saída da organização da competição. E com a saída da competição principal a ideia de disputar o tier dois da competição não agradou brTT, que optou por se aposentar de vez, dessa vez não promentendo uma volta.</li>
                 <li><strong>Adorado pela torcida:</strong> Poucos jogadores têm uma base de fãs tão fiel quanto a do brTT. Ele já venceu várias vezes o prêmio "Craque da Galera", dado por votação popular, e é um dos nomes mais lembrados até por quem parou de acompanhar o CBLOL há anos.</li>
                 <li><strong>Pioneiro no profissionalismo:</strong> Nos tempos em que o cenário competitivo ainda era muito amador, brTT foi um dos primeiros jogadores brasileiros a tratar o jogo como profissão, com disciplina, treino e postura pública. Ele ajudou a moldar o cenário como conhecemos hoje.</li>
                 <li><strong>Voltou ao CBLOL aos 33 anos:</strong> Em 2024, com 33 anos, brTT voltou oficialmente ao CBLOL como jogador, algo raro em um cenário onde a maioria dos atletas se aposenta entre os 22 e 26 anos. Isso o coloca entre os jogadores mais longevos do competitivo mundial de LoL.</li>
@@ -312,11 +312,13 @@
             <h2>Referências</h2>
             <p>
                 <ol>
-                    <li><strong>Leaguepedia - brTT.</strong> Disponível em: <a href="https://lol.fandom.com/wiki/BrTT">https://lol.fandom.com/wiki/BrTT</a></li>
-                    <li><strong>Wikipedia - brTT.</strong> Disponível em: <a href="https://pt.wikipedia.org/wiki/BrTT">https://pt.wikipedia.org/wiki/BrTT</a></li>
+                    <li><strong>Leaguepedia - brTT.</strong> <em>Disponível em: <a href="https://lol.fandom.com/wiki/BrTT">https://lol.fandom.com/wiki/BrTT</a></em></li>
+                    <li><strong>Wikipedia - brTT.</strong> <em>Disponível em: <a href="https://pt.wikipedia.org/wiki/BrTT">https://pt.wikipedia.org/wiki/BrTT</a></em></li>
                 </ol>
             </p>
-            <p>Página criada em: 09/04/2025</p>
+            <p>
+                <em>Página criada em: 09/04/2025</em>
+            </p>
         </footer>
     </body>
 </html>
